--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
+    <script src="https://kit.fontawesome.com/2ff862237f.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="open-sans-normal">
@@ -29,8 +30,8 @@
                 <p class="banner-description">
                     Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
                 </p>
-                <button class="btn-prime">Download CV</button>
-                <button class="btn-prime">Contact</button>
+                <button class="btn-prime"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-prime"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="banner-profile-picture" src="images/hardy.png" alt="">
         </div>
@@ -136,7 +137,7 @@
                </div> 
             </div>
             <div class="text-center resume-donload-cv">
-                <button class="btn-prime">Download CV</button>
+                <button class="btn-prime"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
 
